--- a/main.css
+++ b/main.css
@@ -1,14 +1,32 @@
 body {
     display: grid;
-    grid-template-columns: repeat(1fr, 3);
+    /*grid-template-columns: repeat(1fr, 3);*/
     text-align: center;
+    vertical-align: middle;
 }
 
 .card {
     width: 100px;
     height: 100px;
+    padding: 2px;
 }
 
 .cardHolder {
     height: 104px;
+    padding: 5px;
+}
+
+#table {
+    display: flex;
+    justify-content: center;
+    height:130px;
+    padding: 5px;
+}
+
+.table-item {
+    padding:2px;
+    justify-content: center;
+    span {
+        vertical-align: top;
+    }
 }
