--- a/main.css
+++ b/main.css
@@ -41,6 +41,13 @@ body {
     padding: 0px;
 }
 
+#notif-title {
+    color: rgb(255, 162, 0);
+    font-size: 20px;
+    border: 2px solid rgb(255, 153, 0);
+    background-color: rgb(253, 255, 194);
+}
+
 #notifications {
     font-family: auto;
     color: rgb(255, 162, 0);
